# basic-android

./: .gitignore  README.md  package.json  pyproject.toml
.canonical-app/app/: build.gradle.kts
misc/2way-binding/: binding.js  regular.js
pine/: README.md  gen_components.py  gen_manifest.py  gen_routes.py  init.py  parse.py  patterns.py  pine.py  pyproject.toml  utils.py
pine-app/: README.md
pine/_template/app/: build.gradle.kts
pine/_template/app/src/main/java/com/example/cupcake/: CupcakeScreen.kt
pine/_template/app/src/main/res/values/: strings.xml
pine/antlr-v1/: KotlinLexer.g4  KotlinParser.g4
pine/compiler/: parser.py
pine/kotlin/: KotlinLexer.interp  KotlinLexer.py  KotlinLexer.tokens  KotlinParser.interp  KotlinParser.py  KotlinParser.tokens  KotlinParserListener.py  UnicodeClasses.py
pine/routes/: gen.py  screen.kt.template
pine/scripts/: gen.sh
pine/src/pine/: __init__.py  __main__.py  gen_components.py  gen_manifest.py  gen_routes.py  utils.py
pine/src/pine/compiler/: parser.py  test_parser.py
piners/: Cargo.toml
piners/src/: gen_components.rs  gen_manifest.rs  gen_routes.rs  main.rs  parser.rs  utils.rs
scripts/: gen.sh
src/: CupcakeScreen.kt  MainActivity.kt  Navigation.kt  manifest.json  utils.kt
src/components/: binding-text.pine  coffee.pine  complex-button.pine  component-bindings.pine  computed-bad.pine  computed-good.pine  counter.pine  deep-nested-1.pine  deep-nested-2.pine  deep-nested-3.pine  deep-nested-4.pine  if.pine  keypad.pine  loop.pine  nested.pine  on-mount.pine  reactive-assignments.pine  reactivity.pine  (+4 more)
(+32 files in other folders)
